Closed Bug 595651 Opened 14 years ago Closed 14 years ago

fix border-radius computed style code to reflect reductions for scrollbars, etc.

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Keywords: css3)

Attachments

(1 file)

In bug 459144 I changed certain frame classes to reduce the border-radius.  This is not reflected in computed style, but it should be, and can be quite trivially.
blocking2.0: --- → betaN+
Attached patch patchSplinter Review
Attachment #477994 - Flags: review?(bzbarsky)
Whiteboard: [needs review]
Comment on attachment 477994 [details] [diff] [review]
patch

r=me
Attachment #477994 - Flags: review?(bzbarsky) → review+
Whiteboard: [needs review] → [waiting to land until after 4.0b7 freeze]
http://hg.mozilla.org/mozilla-central/rev/ba73f9a24cb1
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [waiting to land until after 4.0b7 freeze]
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
Depends on: 675711
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: