Fix border-radius computed style code to reflect clamping adjustments that we make to border radius.  (Bug 595651)  r=bzbarsky  a2.0=blocking2.0:betaN